chore: 移除过时类